# macos-clipboard-history

./: Cargo.toml  Info.plist  build.rs  readME.md  tauri.conf.json
src/: clipboard_manager.rs  content_manager.rs  history.rs  lib.rs  main.rs  main.rs.old
