[package]
name = "clipboard_history"
version = "0.1.0"
edition = "2021"
# Explicitly point to the build script
build = "build.rs"

[dependencies]
# Your existing dependencies
tauri = { version = "1", features = ["api-all", "system-tray"] }
tokio = { version = "1.50.0", features = ["full"] }
arboard = "3.6.1"

[build-dependencies]
# Required for the build.rs logic[cite: 12]
tauri-build = "1"